Fixes z-index issue

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Extended About Me statement - what I am looking for (full-time role, keen to lea
           version="1.1"
         >
           <!-- Generator: Sketch 62 (91390) - https://sketch.com -->
-          <title>peep-96</title>
+          <title>Catherine Brett peep</title>
           <desc>Created with Sketch.</desc>
           <g
             id="Introduction"
