Updated About Me copy

--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ Extended About Me statement - interests, industry interests e.g. online resource
             performance, and continuous learning and improvement, my interest
             was piqued. However, having thought of myself (reductively!) as a
             "humanities person" all my adult life, I didn't believe at the time
-            that a "stem" career could really be for me.
+            that a stem career could really be for me.
           </p>
 
           <p>
@@ -218,7 +218,7 @@ Extended About Me statement - interests, industry interests e.g. online resource
             so I took the plunge and enrolled on General Assembly's immersive
             bootcamp. It was fantastic to be back in a learning environment and
             to be really challenged by something totally new, and I am looking
-            forward to starting out in a field where I will be expected to
+            forward to starting out in the field, knowing I will be expected to
             continue to learn and improve throughout my career.
           </p>
 
@@ -227,7 +227,7 @@ Extended About Me statement - interests, industry interests e.g. online resource
             who are super serious about what they do, where I will be supported
             and encouraged to understand my new craft inside out. As a
             colleague, I think I'm adept at asking the right questions and at
-            thinking ahead to forestall problems. Being a linguist, I'm a clear,
+            looking ahead to forestall problems. Being a linguist, I'm a clear,
             adaptable communicator. With a background in written translation, I
             pride myself on (and bore other people with) my attention to detail.
           </p>
@@ -235,8 +235,8 @@ Extended About Me statement - interests, industry interests e.g. online resource
           <p class="resources">
             I am particularly interested in backend development, and I subscribe
             to the
-            <cite>Talk Python to Me</cite> podcast. Having heard him on the
-            show, I have also begun Eric Matthes'
+            <cite>Talk Python to Me</cite> podcast. Having heard Eric Matthes on
+            the show, I have also begun his
             <cite>Python Crash Course</cite> book. I enjoy the
             <cite>JS Party</cite> and <cite>CoRecursive</cite> podcasts as well,
             and particularly liked
@@ -252,11 +252,11 @@ Extended About Me statement - interests, industry interests e.g. online resource
             I am always happy and motivated to learn independently; one of my
             main interests is languages, and having studied French and Spanish
             as my degree, I have also taught myself Italian, and dabbled with
-            other languages too. I work daily to maintain and improve my skills
-            using a variety of resources, from Duolingo (of course) to podcasts,
-            YouTube, conversation "exchanges" with learners of English, and
-            streaming, to name a few. I also love to read in all my languages,
-            and am a member of my university's alumni book group.
+            other languages too. I work daily to maintain and improve these
+            skills using a variety of resources, from Duolingo (of course) to
+            podcasts, YouTube, conversation "exchanges" with learners of
+            English, and Netflix, to name a few. I also love to read in all my
+            languages, and am a member of my university's alumni book group.
           </p>
         </div>
       </section>
