More copy changes

--- a/index.html
+++ b/index.html
@@ -209,17 +209,18 @@ Extended About Me statement - interests, industry interests e.g. online resource
           </p>
 
           <p>
-            A couple of years later and to meet the requirements of a job which
-            asked for some experience of HTML and JavaScript, I turned to
-            Codecademy and found to my surprise that I very much enjoyed it.
-            Around the same time, some personality testing via my university's
-            careers service also suggested the field would be a very good fit
-            for me. All roads now seemed to point to software engineering, and
-            so I took the plunge and enrolled on General Assembly's immersive
-            bootcamp. It was fantastic to be back in a learning environment and
-            to be really challenged by something totally new, and I am looking
-            forward to starting out in the field, knowing I will be expected to
-            continue to learn and improve throughout my career.
+            A couple of years later and to meet the requirements of a job
+            vacancy which asked for some experience of HTML and JavaScript, I
+            turned to Codecademy and found to my surprise that I very much
+            enjoyed it. Around the same time, some personality testing via my
+            university's careers service also suggested the field would be a
+            very good fit for me. All roads now seemed to point to software
+            engineering, and so I took the plunge and enrolled on General
+            Assembly's immersive bootcamp. It was fantastic to be back in a
+            learning environment and to be really challenged by something
+            totally new, and I am looking forward to starting out in the field,
+            knowing I will be expected to continue to learn and improve
+            throughout my career.
           </p>
 
           <p>
