Added target blank and rel noreferrer attributes to anchors

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!-- NOTES: 
-Headshot/illustration?
-Extended About Me statement - interests, industry interests e.g. online resources, podcasts, coding courses etc., more transferrable previous experience
+
 -->
 
 <!DOCTYPE html>
@@ -32,13 +31,23 @@ Extended About Me statement - interests, industry interests e.g. online resource
         Catherine Brett <span class="pink">Junior Software Engineer</span>
       </h1>
       <nav class="contact header-item">
-        <a href="https://github.com/CatherineBrett"
+        <a
+          href="https://github.com/CatherineBrett"
+          target="_blank"
+          rel="noreferrer"
           ><i class="fa-brands fa-github"></i
         ></a>
-        <a href="https://www.linkedin.com/in/catherine-brett/">
+        <a
+          href="https://www.linkedin.com/in/catherine-brett/"
+          target="_blank"
+          rel="noreferrer"
+        >
           <i class="fa-brands fa-linkedin"></i>
         </a>
-        <a href="mailto:catherinejanebrett@icloud.com"
+        <a
+          href="mailto:catherinejanebrett@icloud.com"
+          target="_blank"
+          rel="noreferrer"
           ><i class="fa-solid fa-envelope"></i
         ></a>
       </nav>
@@ -241,7 +250,10 @@ Extended About Me statement - interests, industry interests e.g. online resource
             <cite>Python Crash Course</cite> book. I enjoy the
             <cite>JS Party</cite> and <cite>CoRecursive</cite> podcasts as well,
             and particularly liked
-            <a href="https://corecursive.com/hedy-with-felienne-hermans/"
+            <a
+              href="https://corecursive.com/hedy-with-felienne-hermans/"
+              target="_blank"
+              rel="noreferrer"
               >this recent episode</a
             >
             of the latter. With the bootcamp successfully completed, I am
@@ -400,8 +412,13 @@ Extended About Me statement - interests, industry interests e.g. online resource
               <div class="link-container">
                 <a
                   href="https://github.com/CatherineBrett/SEB-Project-1/blob/main/README.md"
+                  target="_blank"
+                  rel="noreferrer"
                   >README</a
-                ><a href="https://catherinebrett.github.io/SEB-Project-1/"
+                ><a
+                  href="https://catherinebrett.github.io/SEB-Project-1/"
+                  target="_blank"
+                  rel="noreferrer"
                   >Site</a
                 >
               </div>
@@ -432,8 +449,15 @@ Extended About Me statement - interests, industry interests e.g. online resource
               <div class="link-container">
                 <a
                   href="https://github.com/CatherineBrett/SEB-Project-2/blob/main/README.md"
+                  target="_blank"
+                  rel="noreferrer"
                   >README</a
-                ><a href="https://catherine-liv-project-2.netlify.app/">Site</a>
+                ><a
+                  href="https://catherine-liv-project-2.netlify.app/"
+                  target="_blank"
+                  rel="noreferrer"
+                  >Site</a
+                >
               </div>
             </div>
           </div>
@@ -467,8 +491,15 @@ Extended About Me statement - interests, industry interests e.g. online resource
               <div class="link-container">
                 <a
                   href="https://github.com/CatherineBrett/project-3-backend/blob/main/README.md"
+                  target="_blank"
+                  rel="noreferrer"
                   >README</a
-                ><a href="https://bootcamp-buddy.netlify.app/">Site</a>
+                ><a
+                  href="https://bootcamp-buddy.netlify.app/"
+                  target="_blank"
+                  rel="noreferrer"
+                  >Site</a
+                >
               </div>
             </div>
           </div>
@@ -502,8 +533,15 @@ Extended About Me statement - interests, industry interests e.g. online resource
               <div class="link-container">
                 <a
                   href="https://github.com/CatherineBrett/project-4-backend/blob/main/README.md"
+                  target="_blank"
+                  rel="noreferrer"
                   >README</a
-                ><a href="https://harbornecommunitygroups.netlify.app/">Site</a>
+                ><a
+                  href="https://harbornecommunitygroups.netlify.app/"
+                  target="_blank"
+                  rel="noreferrer"
+                  >Site</a
+                >
               </div>
             </div>
           </div>
