Styled Projects section. Changed order of img/info for mobile/desktop. Project 4 img size needs fixing.

--- a/index.html
+++ b/index.html
@@ -274,132 +274,132 @@
         </div>
       </section>
       <section class="experience">
-        <h2 class="large-text">Experience</h2>
-        <p class="small-text">
-          Some of the technologies I have experience with include:
-        </p>
-        <h3 class="med-text">Frontend</h3>
-        <ul class="fe-icons">
-          <li>
-            <i class="devicon-react-original"></i>
-            React
-          </li>
-          <li>
-            <i class="devicon-javascript-plain"></i>
-            JavaScript
-          </li>
-          <li>
-            <i class="devicon-html5-plain"></i>
-            HTML
-          </li>
-          <li>
-            <i class="devicon-css3-plain"></i>
-            CSS
-          </li>
-          <li>
-            <i class="devicon-tailwindcss-original"></i>
-            Tailwind
-          </li>
-          <li>
-            <i class="devicon-bulma-plain"></i>
-            Bulma
-          </li>
-        </ul>
-        <h3 class="med-text">Backend</h3>
-        <ul class="be-icons">
-          <li>
-            <i class="devicon-python-plain"></i>
-            Python
-          </li>
-          <li>
-            <i class="devicon-nodejs-plain"></i>
-            Node.js
-          </li>
-          <li>
-            <i class="devicon-express-original"></i>
-            Express
-          </li>
-          <li>
-            <i class="devicon-flask-original"></i>
-            Flask
-          </li>
-          <li>
-            <i class="devicon-mongoose-original"></i>
-            Mongoose
-          </li>
-          <li>
-            <i class="devicon-sqlalchemy-plain"></i>
-            SQLAlchemy
-          </li>
-          <li>
-            <i class="devicon-mongodb-plain"></i>
-            MongoDB
-          </li>
-          <li>
-            <i class="devicon-postgresql-plain"></i>
-            PostgreSQL
-          </li>
-          <li>
-            <i class="devicon-insomnia-plain"></i>
-            Insomnia
-          </li>
-        </ul>
-        <h3 class="med-text">Other</h3>
-        <ul class="other-icons">
-          <li>
-            <i class="devicon-git-plain"></i>
-            Git
-          </li>
-          <li>
-            <i class="devicon-github-original"></i>
-            GitHub
-          </li>
-          <li>
-            <i class="devicon-vscode-plain"></i>
-            VS Code
-          </li>
-          <li>
-            <i class="devicon-typescript-plain"></i>
-            TypeScript
-          </li>
-          <li>
-            <i class="devicon-vite-original"></i>
-            Vite
-          </li>
-          <li>
-            <i class="devicon-pytest-plain"></i>
-            pytest
-          </li>
-          <li>
-            <i class="devicon-netlify-plain"></i>
-            Netlify
-          </li>
-          <li>
-            <i class="devicon-heroku-original"></i>
-            Heroku
-          </li>
-        </ul>
+        <div>
+          <h2 class="large-text centered">Experience</h2>
+          <p class="centered">
+            Some of the technologies I have experience with include:
+          </p>
+        </div>
+        <div class="skills">
+          <h3 class="med-text centered">Frontend</h3>
+          <ul class="fe-icons">
+            <li>
+              <i class="devicon-react-original"></i>
+              React
+            </li>
+            <li>
+              <i class="devicon-javascript-plain"></i>
+              JavaScript
+            </li>
+            <li>
+              <i class="devicon-html5-plain"></i>
+              HTML
+            </li>
+            <li>
+              <i class="devicon-css3-plain"></i>
+              CSS
+            </li>
+            <li>
+              <i class="devicon-tailwindcss-original"></i>
+              Tailwind
+            </li>
+            <li>
+              <i class="devicon-bulma-plain"></i>
+              Bulma
+            </li>
+          </ul>
+        </div>
+        <div class="skills">
+          <h3 class="med-text centered">Backend</h3>
+          <ul class="be-icons">
+            <li>
+              <i class="devicon-python-plain"></i>
+              Python
+            </li>
+            <li>
+              <i class="devicon-nodejs-plain"></i>
+              Node.js
+            </li>
+            <li>
+              <i class="devicon-express-original"></i>
+              Express
+            </li>
+            <li>
+              <i class="devicon-flask-original"></i>
+              Flask
+            </li>
+            <li>
+              <i class="devicon-mongoose-original"></i>
+              Mongoose
+            </li>
+            <li>
+              <i class="devicon-sqlalchemy-plain"></i>
+              SQLAlchemy
+            </li>
+            <li>
+              <i class="devicon-mongodb-plain"></i>
+              MongoDB
+            </li>
+            <li>
+              <i class="devicon-postgresql-plain"></i>
+              PostgreSQL
+            </li>
+            <li>
+              <i class="devicon-insomnia-plain"></i>
+              Insomnia
+            </li>
+          </ul>
+        </div>
+        <div class="skills">
+          <h3 class="med-text centered">Other</h3>
+          <ul class="other-icons">
+            <li>
+              <i class="devicon-git-plain"></i>
+              Git
+            </li>
+            <li>
+              <i class="devicon-github-original"></i>
+              GitHub
+            </li>
+            <li>
+              <i class="devicon-vscode-plain"></i>
+              VS Code
+            </li>
+            <li>
+              <i class="devicon-typescript-plain"></i>
+              TypeScript
+            </li>
+            <li>
+              <i class="devicon-vite-original"></i>
+              Vite
+            </li>
+            <li>
+              <i class="devicon-pytest-plain"></i>
+              pytest
+            </li>
+            <li>
+              <i class="devicon-netlify-plain"></i>
+              Netlify
+            </li>
+            <li>
+              <i class="devicon-heroku-original"></i>
+              Heroku
+            </li>
+          </ul>
+        </div>
       </section>
       <section class="projects">
         <h2 class="large-text">Projects</h2>
-        <p class="small-text">
+        <p>
           I completed General Assembly's Software Engineering Bootcamp between
-          January and April 2024. As part of the curriculum I built four
-          projects which are outlined below:
+          January and April 2024. As part of the course I built four projects:
         </p>
         <article class="project">
-          <h3 class="med-text">
-            Project 1 (Solo) <span class="project-name">Frogger</span>
-          </h3>
           <div class="project-body">
-            <picture class="project-image">
-              <source
-                srcset="/assets/frogger-desktop.png"
-                media="(min-width: 820px)"
-              />
-              <img src="/assets/frogger-mobile.png" alt="Frogger screenshot" />
-            </picture>
             <div class="project-info">
+              <h3 class="med-text">
+                Project 1 (Solo) <span class="pink">Frogger</span>
+              </h3>
               <p>
                 Using DOM manipulation, I built a grid-based browser version of
                 80s arcade game Frogger in HTML, CSS and JavaScript across 6
@@ -422,26 +422,26 @@
                 >
               </div>
             </div>
+            <picture class="project-image">
+              <source
+                srcset="/assets/frogger-desktop.png"
+                media="(min-width: 820px)"
+              />
+              <img src="/assets/frogger-mobile.png" alt="Frogger screenshot" />
+            </picture>
           </div>
         </article>
         <article class="project">
-          <h3 class="med-text">
-            Project 2 (Pair) <span class="project-name">Quiz App</span>
-          </h3>
           <div class="project-body">
-            <picture class="project-image">
-              <source
-                srcset="/assets/quiz-desktop.png"
-                media="(min-width: 820px)"
-              />
-              <img src="/assets/quiz-mobile.png" alt="Quiz screenshot" />
-            </picture>
             <div class="project-info">
+              <h3 class="med-text">
+                Project 2 (Pair) <span class="pink">Quiz App</span>
+              </h3>
               <p>
-                Produced a React quiz app with TypeScript over a two-day
-                hackathon. Our app consumed the Open Trivia public API, had a
-                router with two “pages”, and was styled using the Bulma CSS
-                framework. We mostly pair-programmed, taking turns as
+                With a partner, I produced a React quiz app with TypeScript over
+                a two-day hackathon. Our app consumed the Open Trivia public
+                API, had a router with two “pages”, and was styled using the
+                Bulma CSS framework. We mostly pair-programmed, taking turns as
                 driver/navigator.
               </p>
               <div class="link-container">
@@ -458,29 +458,26 @@
                 >
               </div>
             </div>
+            <picture class="project-image">
+              <source
+                srcset="/assets/quiz-desktop.png"
+                media="(min-width: 820px)"
+              />
+              <img src="/assets/quiz-mobile.png" alt="Quiz screenshot" />
+            </picture>
           </div>
         </article>
         <article class="project">
-          <h3 class="med-text">
-            Project 3 (Group of 3)
-            <span class="project-name">Bootcamp Buddy</span>
-          </h3>
           <div class="project-body">
-            <picture class="project-image">
-              <source
-                srcset="/assets/bb-desktop.png"
-                media="(min-width: 820px)"
-              />
-              <img
-                src="/assets/bb-mobile.png"
-                alt="Bootcamp Buddy screenshot"
-              />
-            </picture>
             <div class="project-info">
+              <h3 class="med-text">
+                Project 3 (Group of 3)
+                <span class="pink">Bootcamp Buddy</span>
+              </h3>
               <p>
-                Built a full-stack “bootcamp advice” app over one week, using
-                MongoDB, Express, React/TypeScript and Node.js. My contributions
-                to this group project included providing the concept,
+                Our group of three built a full-stack “bootcamp advice” app over
+                one week, using MongoDB, Express, React/TypeScript and Node.js.
+                My contributions to the project included providing the concept,
                 implementing UI, writing some of the key logic for our CRUD
                 functionality and producing some of the form validation and
                 error handling.
@@ -499,32 +496,33 @@
                 >
               </div>
             </div>
-          </div>
-        </article>
-        <article class="project">
-          <h3 class="med-text">
-            Project 4 (Solo)
-            <span class="project-name">Harborne Community Groups</span>
-          </h3>
-          <div class="project-body">
             <picture class="project-image">
               <source
-                srcset="/assets/hcg-desktop.png"
+                srcset="/assets/bb-desktop.png"
                 media="(min-width: 820px)"
               />
               <img
-                src="/assets/hcg-mobile.png"
-                alt="Harborne Community Groups screenshot"
+                src="/assets/bb-mobile.png"
+                alt="Bootcamp Buddy screenshot"
               />
             </picture>
+          </div>
+        </article>
+        <article class="project">
+          <div class="project-body">
             <div class="project-info">
+              <h3 class="med-text">
+                Project 4 (Solo)
+                <span class="pink">Harborne Community Groups</span>
+              </h3>
               <p>
-                Built a full-stack “community groups” app over 8 business days
-                (12 in total), using a Python Flask API with Flask REST
-                framework to serve my data from a Postgres database. I built my
-                frontend with React/TypeScript. The project has CRUD
-                functionality, with various models and a mix of one-to-many and
-                many-to-many relationships.
+                For my final project, I worked solo to build a full-stack
+                “community groups” app over 8 business days (12 in total). I
+                used a Python Flask API with Flask REST framework to serve my
+                data from a Postgres database. I built my frontend with
+                React/TypeScript. The project has CRUD functionality, with
+                various models and a mix of one-to-many and many-to-many
+                relationships.
               </p>
               <div class="link-container">
                 <a
@@ -540,6 +538,16 @@
                 >
               </div>
             </div>
+            <picture class="project-image">
+              <source
+                srcset="/assets/hcg-desktop.png"
+                media="(min-width: 820px)"
+              />
+              <img
+                src="/assets/hcg-mobile.png"
+                alt="Harborne Community Groups screenshot"
+              />
+            </picture>
           </div>
         </article>
       </section>
