Reduced h3 size in Experience section. Minor copy changes.

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
             turned to Codecademy and found to my surprise that I very much
             enjoyed it. Around the same time, some personality testing via my
             university's careers service also suggested the field would be a
-            very good fit for me. All roads now seemed to point to software
+            very good fit for me. All signs now seemed to point to software
             engineering, and so I took the plunge and enrolled on General
             Assembly's immersive bootcamp. It was fantastic to be back in a
             learning environment and to be really challenged by something
@@ -239,7 +239,8 @@
             colleague, I think I'm adept at asking the right questions and at
             looking ahead to forestall problems. Being a linguist, I'm a clear,
             adaptable communicator. With a background in written translation, I
-            pride myself on (and bore other people with) my attention to detail.
+            pride myself on (and often bore other people with) my attention to
+            detail.
           </p>
 
           <p class="resources">
@@ -254,7 +255,7 @@
               href="https://corecursive.com/hedy-with-felienne-hermans/"
               target="_blank"
               rel="noreferrer"
-              >this recent episode</a
+              >this episode</a
             >
             of the latter. With the bootcamp successfully completed, I am
             embracing the opportunity to practise what I've learned so far and
@@ -281,7 +282,7 @@
           </p>
         </div>
         <div class="skills">
-          <h3 class="med-text centered">Frontend</h3>
+          <h3 class="small-text centered">Frontend</h3>
           <ul class="fe-icons">
             <li>
               <i class="devicon-react-original"></i>
@@ -310,7 +311,7 @@
           </ul>
         </div>
         <div class="skills">
-          <h3 class="med-text centered">Backend</h3>
+          <h3 class="small-text centered">Backend</h3>
           <ul class="be-icons">
             <li>
               <i class="devicon-python-plain"></i>
@@ -328,7 +329,7 @@
               <i class="devicon-flask-original"></i>
               Flask
             </li>
-            <li>
+            <li class="enlarge">
               <i class="devicon-mongoose-original"></i>
               Mongoose
             </li>
@@ -351,7 +352,7 @@
           </ul>
         </div>
         <div class="skills">
-          <h3 class="med-text centered">Other</h3>
+          <h3 class="small-text centered">Other</h3>
           <ul class="other-icons">
             <li>
               <i class="devicon-git-plain"></i>
